3: Rename WES to SCHOOLOGY. Import settings.

--- a/client/src/styles/tests/extend-rule.css
+++ b/client/src/styles/tests/extend-rule.css
@@ -1,8 +1,8 @@
-/*! WES | Imports */
+/*! SCHOOLOGY | Imports */
 
 @import "../_imports/components/c-gauge/layout-overlap.css";
 
-/*! WES | Code */
+/*! SCHOOLOGY | Code */
 
 /* SEE: c-gauge/overlap.structure.css */
 .c-gauge--overlap {
