--- a/client/src/styles/tests/mixin.css
+++ b/client/src/styles/tests/mixin.css
@@ -1,4 +1,4 @@
-/*! WES | Settings */
+/*! SCHOOLOGY | Settings */
 
 :root {
 	--m-progress-color--fill: red;
@@ -6,26 +6,26 @@
 	--m-progress-color--border: brickred;
 }
 
-/*! WES | TEST! */
+/*! SCHOOLOGY | TEST! */
 
 @mixin progress-color
     .c-gauge--overlap[class*="has-range--count"] .c-gauge__range:not(:last-child),
     null, transparent, null;
 
-/*! WES | Code */
+/*! SCHOOLOGY | Code */
 
-/*! WES | Code: Test: Custom Properties */
+/*! SCHOOLOGY | Code: Test: Custom Properties */
 
 @mixin progress-color progress, var(--m-progress-color--fill), var(--m-progress-color--bkgd), var(--m-progress-color--border);
 
-/*! WES | Code: Test: Raw Values */
+/*! SCHOOLOGY | Code: Test: Raw Values */
 
 @mixin progress-color progress, red, pink, brickred {};
 
-/*! WES | Code: Test: Empty Values */
+/*! SCHOOLOGY | Code: Test: Empty Values */
 
 @mixin progress-color progress, , ,  {};
 
-/*! WES | Code: Test: Null Values */
+/*! SCHOOLOGY | Code: Test: Null Values */
 
 @mixin progress-color progress, null, null, null {};
