--- a/client/src/styles/site/core.css
+++ b/client/src/styles/site/core.css
@@ -1,19 +1,17 @@
-/*! WES | Site Core */
+/*! SCHOOLOGY | Site Core */
 
-/* WES | Site Core: Settings */
+/* SCHOOLOGY | Site Core: Settings */
 
-/* SEE: https://stackoverflow.com/q/54990081/11817077 */
-/* FAQ: Processor applies global settings via configuration */
-/* FAQ: A previous solution exported settings to a file */
-/* @import "../_imports/settings/*.css"; */
-/* @import "./_exports/settings.css"; */
+/* FAQ: This file includes all settings. Settings are all globally available */
+/* NOTE: Importing, only as used, can lead to difficult duplication problems */
+@import "./settings.css";
 
-/* WES | Site Core: Tools */
+/* SCHOOLOGY | Site Core: Tools */
 
 /* FAQ: Processor uses global tools via configuration */
 /* @import "../_imports/tools/mixins/*.css"; */
 
-/*! WES | Site Core: Generic */
+/*! SCHOOLOGY | Site Core: Generic */
 
 @import "../_imports/generics/vendor/normalize.css";
 @import "../_imports/generics/vendor/h5bp.base.css";
@@ -23,7 +21,7 @@
 @import "../_imports/generics/every-element.css";
 @import "../_imports/generics/non-tag.css";
 
-/*! WES | Site Core: Elements */
+/*! SCHOOLOGY | Site Core: Elements */
 
 @import "../_imports/elements/content-sectioning.css";
 @import "../_imports/elements/inline-text.css";
@@ -31,13 +29,13 @@
 @import "../_imports/elements/text-content.css";
 @import "../_imports/elements/forms.css";
 
-/*! WES | Site Core: Objects */
+/*! SCHOOLOGY | Site Core: Objects */
 
 @import "../_imports/objects/o-columns.css";
 @import "../_imports/objects/o-page.css";
 @import "../_imports/objects/o-app.css";
 
-/*! WES | Site Core: Components */
+/*! SCHOOLOGY | Site Core: Components */
 
 @import "../_imports/components/c-intro.css";
 @import "../_imports/components/c-loading.css";
