--- a/client/src/styles/_imports/components/c-error.css
+++ b/client/src/styles/_imports/components/c-error.css
@@ -5,7 +5,7 @@ An error message for the user.
 
 Markup: c-error.twig
 
-Styleguide Schoology.Components.Error
+Styleguide Components.Error
 */
 .c-error {
   color: red;
