--- a/client/src/styles/_imports/components/c-intro.css
+++ b/client/src/styles/_imports/components/c-intro.css
@@ -7,7 +7,7 @@ _This component **should not** become some grand layout element. It has no headi
 
 Markup: c-intro.twig
 
-Styleguide Schoology.Components.Intro
+Styleguide Components.Intro
 */
 .c-intro {
     /* Remove layout spacing */
