--- a/client/src/styles/_imports/elements/forms.css
+++ b/client/src/styles/_imports/elements/forms.css
@@ -7,7 +7,7 @@ Reference:
 
 - [MDN: HTML element reference: Forms](https://developer.mozilla.org/en-US/docs/Web/HTML/Element#Forms)
 
-Styleguide Schoology.Elements.Form
+Styleguide Elements.Form
 */
 
 @import "../../_imports/elements/forms.progress.css";
