--- a/client/src/styles/_imports/elements/forms.progress.css
+++ b/client/src/styles/_imports/elements/forms.progress.css
@@ -3,7 +3,7 @@
 
 Markup: forms.progress.twig
 
-Styleguide Schoology.Elements.Form.Progress
+Styleguide Elements.Form.Progress
 */
 /* SEE: https://github.com/scottaohara/a11y_styled_form_controls/blob/master/src/assets/css/progress-bar.css */
 /* SEE: https://scottaohara.github.io/a11y_styled_form_controls/src/progress-bar/ */
