--- a/client/src/styles/_imports/elements/inline-text.css
+++ b/client/src/styles/_imports/elements/inline-text.css
@@ -7,7 +7,7 @@ Reference:
 
 - [MDN: HTML element reference: Inline text semantics](https://developer.mozilla.org/en-US/docs/Web/HTML/Element#Inline_text_semantics)
 
-Styleguide Schoology.Elements.InlineTextSemantics
+Styleguide Elements.InlineTextSemantics
 */
 
 @import "../../_imports/elements/inline-text.anchor.css";
