--- a/client/src/styles/_imports/elements/inline-text.misc.css
+++ b/client/src/styles/_imports/elements/inline-text.misc.css
@@ -1,7 +1,7 @@
 /*
 <b>, <mark>
 
-Styleguide Schoology.Elements.InlineTextSemantics.Misc
+Styleguide Elements.InlineTextSemantics.Misc
 */
 b {
     font-weight: normal;
