--- a/client/src/styles/_imports/objects/o-page.css
+++ b/client/src/styles/_imports/objects/o-page.css
@@ -3,7 +3,7 @@ Page
 
 An application-specific page layout
 
-Styleguide Schoology.Objects.Page
+Styleguide Objects.Page
 */
 
 /* Hide scrollable content caused by `--global-layout--page-width: 100vw` */
