--- a/client/src/styles/_imports/settings/prop.font.css
+++ b/client/src/styles/_imports/settings/prop.font.css
@@ -29,7 +29,7 @@ Markup:
 .d-font-size--xx-small - For tiny font-size.
 .d-font-size--xxx-small - For baby font-size.
 
-Styleguide Schoology.Settings.CustomProperties.Font.Sizes
+Styleguide Settings.CustomProperties.Font.Sizes
 */
 
 :root {
