--- a/client/src/styles/_imports/trumps/README.css
+++ b/client/src/styles/_imports/trumps/README.css
@@ -75,7 +75,7 @@ Styles and visual fixes applied in a "hacky" manner.
 - **Avoid using these styles.**
 - **Avoid adding to these files.**
 
-Styleguide Schoology.Trumps.Hacks
+Styleguide Trumps.Hacks
 */
 
 /*
@@ -86,7 +86,7 @@ Utility styles that should not exist.
 - **Avoid using these styles.**
 - **Avoid adding to these files.**
 
-Styleguide Schoology.Trumps.Hacks.Utilities
+Styleguide Trumps.Hacks.Utilities
 */
 
 /*
@@ -97,7 +97,7 @@ Styles and visual fixes for elements by ID.
 - **Avoid using these styles.**
 - **Avoid adding to these files.**
 
-Styleguide Schoology.Trumps.Hacks.IDs
+Styleguide Trumps.Hacks.IDs
 */
 
 /* DO NOT ADD STYLES HERE; ADD THEM INSIDE STYLESHEETS IN THIS DIRECTORY */
