--- a/client/src/styles/_imports/elements/inline-text.anchor.css
+++ b/client/src/styles/_imports/elements/inline-text.anchor.css
@@ -1,7 +1,7 @@
 /*
 <a>
 
-Styleguide Schoology.Elements.InlineTextSemantics.Anchor
+Styleguide Elements.InlineTextSemantics.Anchor
 */
 :root {
     --element-anchor--color: var(--global-color-accent);
