--- a/client/src/styles/_imports/elements/README.css
+++ b/client/src/styles/_imports/elements/README.css
@@ -16,7 +16,7 @@ Rules:
 
 Weight: 4
 
-Styleguide Core.Elements
+Styleguide Elements
 */
 
 /* DO NOT ADD STYLES HERE; ADD THEM INSIDE STYLESHEETS IN THIS DIRECTORY */
