--- a/client/src/styles/_imports/elements/content-sectioning.css
+++ b/client/src/styles/_imports/elements/content-sectioning.css
@@ -7,7 +7,7 @@ Reference:
 
 - [MDN: HTML element reference: Interactive elements](https://developer.mozilla.org/en-US/docs/Web/HTML/Element#Content_sectioning)
 
-Styleguide Example.Elements.ContentSectioning
+Styleguide Elements.ContentSectioning
 */
 
 @import "../../_imports/elements/content-sectioning.headings.css";
