--- a/client/src/styles/_imports/elements/content-sectioning.headings.css
+++ b/client/src/styles/_imports/elements/content-sectioning.headings.css
@@ -1,7 +1,7 @@
 /*
 Headings
 
-Styleguide Example.Elements.CotnentSectioning.Headings
+Styleguide Elements.CotnentSectioning.Headings
 */
 
 :--global-heading-element {
