--- a/client/src/styles/_imports/elements/interactive.css
+++ b/client/src/styles/_imports/elements/interactive.css
@@ -7,7 +7,7 @@ Reference:
 
 - [MDN: HTML element reference: Interactive elements](https://developer.mozilla.org/en-US/docs/Web/HTML/Element#Interactive_elements)
 
-Styleguide Example.Elements.InteractiveElements
+Styleguide Elements.InteractiveElements
 */
 
 @import "../../_imports/elements/interactive.details-summary.css";
