--- a/client/src/styles/_imports/elements/text-content.css
+++ b/client/src/styles/_imports/elements/text-content.css
@@ -7,7 +7,7 @@ Reference:
 
 - [MDN: HTML element reference: Interactive elements](https://developer.mozilla.org/en-US/docs/Web/HTML/Element#Text_content)
 
-Styleguide Example.Elements.TextContent
+Styleguide Elements.TextContent
 */
 
 @import "../../_imports/elements/text-content.lists.css";
