--- a/client/src/styles/_imports/generics/non-tag.twig
+++ b/client/src/styles/_imports/generics/non-tag.twig
@@ -3,6 +3,6 @@
     <abbr title="HyperText Markup language">HTML</abbr>
     <label for="d-generics--non-tag--field" title="This field is disabled intentionally to show styling for that state.">Disabled Field</label>
     <input id="d-generics--non-tag--field" value="Can't touch this!" disabled />
-    <p>This text is able to be selected. Selected text may be given a unique style.</p>
+    <p>This text is able to be selected. Selected text may be given a unique style. Also, obtain focus on this <a href="http://example.com">example hyperlink</a>.</p>
   </section>
 </main>
