--- a/client/src/styles/_imports/settings/select.elements.css
+++ b/client/src/styles/_imports/settings/select.elements.css
@@ -10,7 +10,7 @@ Elements
 - :--global-title-element--abbr - `abbr[title]`
 - :--global-title-element--any - `[title]`
 
-Styleguide Core.Settings.CustomSelectors.Elements
+Styleguide Settings.CustomSelectors.Elements
 */
 
 /* WARNING: This selector omits these elements:
