--- a/client/src/styles/_imports/tools/none.css
+++ b/client/src/styles/_imports/tools/none.css
@@ -3,7 +3,7 @@ None
 
 No global "functions" exist.
 
-Styleguide Core.Tools.Functions.None
+Styleguide Tools.Functions.None
 */
 
 /*
@@ -11,5 +11,5 @@ None
 
 No global "extends" exist.
 
-Styleguide Core.Tools.Extends.None
+Styleguide Tools.Extends.None
 */
