--- a/client/src/styles/_imports/generics/README.css
+++ b/client/src/styles/_imports/generics/README.css
@@ -18,7 +18,7 @@ Rules:
 
 Weight: 3
 
-Styleguide Core.Generics
+Styleguide Generics
 */
 
 /* DO NOT ADD STYLES HERE; ADD THEM INSIDE STYLESHEETS IN THIS DIRECTORY */
