--- a/client/src/styles/_imports/generics/every-element.css
+++ b/client/src/styles/_imports/generics/every-element.css
@@ -7,7 +7,7 @@ These styles are applied directly to every element.
 
 Weight: 0
 
-Styleguide Core.Generics.EveryElement
+Styleguide Generics.EveryElement
 */
 * {
   box-sizing: border-box;
