--- a/client/src/styles/_imports/objects/README.css
+++ b/client/src/styles/_imports/objects/README.css
@@ -17,7 +17,7 @@ Guidelines:
 
 Weight: 5
 
-Styleguide Core.Objects
+Styleguide Objects
 */
 
 /* DO NOT ADD STYLES HERE; ADD THEM INSIDE STYLESHEETS IN THIS DIRECTORY */
