--- a/client/src/styles/_imports/settings/prop.colors.css
+++ b/client/src/styles/_imports/settings/prop.colors.css
@@ -5,15 +5,15 @@
 Colors
 
 These are standard colors for an application. The format is:
-- `global-color-*--xxx-light`
-- `global-color-*--xx-light`
-- `global-color-*--x-light`
-- `global-color-*--light`
-- `global-color-*`
-- `global-color-*--dark`
-- `global-color-*--x-dark`
-- `global-color-*--xx-dark`
-- `global-color-*--xxx-dark`
+- `--global-color-*--xxx-light`
+- `--global-color-*--xx-light`
+- `--global-color-*--x-light`
+- `--global-color-*--light`
+- `--global-color-*`
+- `--global-color-*--dark`
+- `--global-color-*--x-dark`
+- `--global-color-*--xx-dark`
+- `--global-color-*--xxx-dark`
 
 __WCAG__
 - The contrast between these values _should_ pass __some__ WCAG ratios:
@@ -25,19 +25,21 @@ __WCAG__
 
 > For colors that do __not__ have all shades and tints defined, the WCAG ratios value contrast requirements __must__ be documented.
 
-Styleguide Core.Settings.CustomProperties.Colors
+Styleguide Settings.CustomProperties.Colors
 */
+
+:root {
 /*
 Common Text
 
 Colors:
-global-color-text--xxx-light: hsl(0, 0%, 62%)
-global-color-text--xx-light:  hsl(0, 0%, 50%)
-global-color-text--x-light:   hsl(0, 0%, 38%)
-global-color-text--light:     hsl(0, 0%, 26%)
-global-color-text--normal:    hsl(0, 0%, 14%)
-global-color-text--dark:      hsl(0, 0%, 02%)
-global-color-text--x-dark:    hsl(0, 0%, 00%)
+--global-color-text--xxx-light: hsl(0, 0%, 62%)
+--global-color-text--xx-light:  hsl(0, 0%, 50%)
+--global-color-text--x-light:   hsl(0, 0%, 38%)
+--global-color-text--light:     hsl(0, 0%, 26%)
+--global-color-text--normal:    hsl(0, 0%, 14%)
+--global-color-text--dark:      hsl(0, 0%, 02%)
+--global-color-text--x-dark:    hsl(0, 0%, 00%)
 
 __WCAG__
 - The contrast between these values _should_ pass __all__ WCAG ratios:
@@ -47,46 +49,35 @@ __WCAG__
 
 Weight: 0
 
-Styleguide Core.Settings.CustomProperties.Colors.CommonText
+Styleguide Settings.CustomProperties.Colors.CommonText
 */
+  --global-color-text--xxx-light:    hsl(0, 0%, 62%);
+  --global-color-text--xx-light:     hsl(0, 0%, 50%);
+  --global-color-text--x-light:      hsl(0, 0%, 38%);
+  --global-color-text--light:        hsl(0, 0%, 26%);
+  --global-color-text--normal:       hsl(0, 0%, 14%);
+  --global-color-text--dark:         hsl(0, 0%, 02%);
+  --global-color-text--x-dark:       hsl(0, 0%, 00%);
+
 /*
 Common Backgrounds
 
 Colors:
-global-color-bkgd--light:     hsl(0, 0%, 100%)
-global-color-bkgd--normal:    hsl(0, 0%, 98%)
-global-color-bkgd--dark:      hsl(0, 0%, 86%)
+--global-color-bkgd--light:     hsl(0, 0%, 100%)
+--global-color-bkgd--normal:    hsl(0, 0%, 98%)
+--global-color-bkgd--dark:      hsl(0, 0%, 86%)
 
 __WCAG__
 When using, check color contrast against WCAG ratios.
 
 Weight: 0.5
 
-Styleguide Core.Settings.CustomProperties.Colors.CommonText
+Styleguide Settings.CustomProperties.Colors.CommonText
 */
-/*
-Gray
+  --global-color-bkgd--light:        hsl(0, 0%, 100%);
+  --global-color-bkgd--normal:       hsl(0, 0%, 98%);
+  --global-color-bkgd--dark:         hsl(0, 0%, 86%);
 
-These colors are for positive things, like:
-- confirmative actions
-- success notifications
-- beneficial events
-
-Colors:
-global-color-success--xxx-light: hsl(155, 100%, 98%)
-global-color-success--xx-light:  hsl(155, 100%, 86%)
-global-color-success--x-light:   hsl(155, 100%, 74%)
-global-color-success--light:     hsl(155, 100%, 62%)
-global-color-success:            hsl(155, 100%, 50%)
-global-color-success--dark:      hsl(155, 100%, 38%)
-global-color-success--x-dark:    hsl(155, 100%, 26%)
-global-color-success--xx-dark:   hsl(155, 100%, 14%)
-global-color-success--xxx-dark:  hsl(155, 100%, 02%)
-
-Weight: 1
-
-Styleguide Core.Settings.CustomProperties.Colors.Gray
-*/
 /*
 Positive
 
@@ -96,102 +87,20 @@ These colors are for positive things, like:
 - beneficial events
 
 Colors:
-global-color-success--xxx-light: hsl(155, 100%, 98%)
-global-color-success--xx-light:  hsl(155, 100%, 86%)
-global-color-success--x-light:   hsl(155, 100%, 74%)
-global-color-success--light:     hsl(155, 100%, 62%)
-global-color-success:            hsl(155, 100%, 50%)
-global-color-success--dark:      hsl(155, 100%, 38%)
-global-color-success--x-dark:    hsl(155, 100%, 26%)
-global-color-success--xx-dark:   hsl(155, 100%, 14%)
-global-color-success--xxx-dark:  hsl(155, 100%, 02%)
+--global-color-success--xxx-light: hsl(155, 100%, 98%)
+--global-color-success--xx-light:  hsl(155, 100%, 86%)
+--global-color-success--x-light:   hsl(155, 100%, 74%)
+--global-color-success--light:     hsl(155, 100%, 62%)
+--global-color-success:            hsl(155, 100%, 50%)
+--global-color-success--dark:      hsl(155, 100%, 38%)
+--global-color-success--x-dark:    hsl(155, 100%, 26%)
+--global-color-success--xx-dark:   hsl(155, 100%, 14%)
+--global-color-success--xxx-dark:  hsl(155, 100%, 02%)
 
 Weight: 1
 
-Styleguide Core.Settings.CustomProperties.Colors.Positive
+Styleguide Settings.CustomProperties.Colors.Positive
 */
-/*
-Warning
-
-These colors are for things of concern, like:
-- potentially destructive actions
-- warning notifications
-- possibly dangerous events
-
-Colors:
-global-color-warning--xxx-light: hsl(50, 100%, 98%)
-global-color-warning--xx-light:  hsl(50, 100%, 86%)
-global-color-warning--x-light:   hsl(50, 100%, 74%)
-global-color-warning--light:     hsl(50, 100%, 62%)
-global-color-warning:            hsl(50, 100%, 50%)
-global-color-warning--dark:      hsl(50, 100%, 38%)
-global-color-warning--x-dark:    hsl(50, 100%, 26%)
-global-color-warning--xx-dark:   hsl(50, 100%, 14%)
-global-color-warning--xxx-dark:  hsl(50, 100%, 02%)
-
-Weight: 2
-
-Styleguide Core.Settings.CustomProperties.Colors.Warning
-*/
-/*
-Negative
-
-These colors are for negative things, like:
-- destructive actions
-- error notifications
-- dangerous events
-
-Colors:
-global-color-danger--xxx-light: hsl(0, 100%, 98%)
-global-color-danger--xx-light:  hsl(0, 100%, 86%)
-global-color-danger--x-light:   hsl(0, 100%, 74%)
-global-color-danger--light:     hsl(0, 100%, 62%)
-global-color-danger:            hsl(0, 100%, 50%)
-global-color-danger--dark:      hsl(0, 100%, 38%)
-global-color-danger--x-dark:    hsl(0, 100%, 26%)
-global-color-danger--xx-dark:   hsl(0, 100%, 14%)
-global-color-danger--xxx-dark:  hsl(0, 100%, 02%)
-
-Weight: 3
-
-Styleguide Core.Settings.CustomProperties.Colors.Negative
-*/
-/*
-Objective
-
-These colors are for things to notice, like:
-- alternate actions
-- informative notifications
-- noteworthy events
-
-Colors:
-global-color-inform--xxx-light: hsl(210, 100%, 98%)
-global-color-inform--xx-light:  hsl(210, 100%, 86%)
-global-color-inform--x-light:   hsl(210, 100%, 74%)
-global-color-inform--light:     hsl(210, 100%, 62%)
-global-color-inform:            hsl(210, 100%, 50%)
-global-color-inform--dark:      hsl(210, 100%, 38%)
-global-color-inform--x-dark:    hsl(210, 100%, 26%)
-global-color-inform--xx-dark:   hsl(210, 100%, 14%)
-global-color-inform--xxx-dark:  hsl(210, 100%, 02%)
-
-Weight: 4
-
-Styleguide Core.Settings.CustomProperties.Colors.Objective
-*/
-:root {
-  --global-color-text--xxx-light:    hsl(0, 0%, 62%);
-  --global-color-text--xx-light:     hsl(0, 0%, 50%);
-  --global-color-text--x-light:      hsl(0, 0%, 38%);
-  --global-color-text--light:        hsl(0, 0%, 26%);
-  --global-color-text--normal:       hsl(0, 0%, 14%);
-  --global-color-text--dark:         hsl(0, 0%, 02%);
-  --global-color-text--x-dark:       hsl(0, 0%, 00%);
-
-  --global-color-bkgd--light:        hsl(0, 0%, 100%);
-  --global-color-bkgd--normal:       hsl(0, 0%, 98%);
-  --global-color-bkgd--dark:         hsl(0, 0%, 86%);
-
   --global-color-success--xxx-light: hsl(130, 30%, 98%);
   --global-color-success--xx-light:  hsl(130, 30%, 86%);
   --global-color-success--x-light:   hsl(130, 30%, 74%);
@@ -202,6 +111,29 @@ Styleguide Core.Settings.CustomProperties.Colors.Objective
   --global-color-success--xx-dark:   hsl(130, 30%, 14%);
   --global-color-success--xxx-dark:  hsl(130, 30%, 02%);
 
+/*
+Warning
+
+These colors are for things of concern, like:
+- potentially destructive actions
+- warning notifications
+- possibly dangerous events
+
+Colors:
+--global-color-warning--xxx-light: hsl(50, 100%, 98%)
+--global-color-warning--xx-light:  hsl(50, 100%, 86%)
+--global-color-warning--x-light:   hsl(50, 100%, 74%)
+--global-color-warning--light:     hsl(50, 100%, 62%)
+--global-color-warning:            hsl(50, 100%, 50%)
+--global-color-warning--dark:      hsl(50, 100%, 38%)
+--global-color-warning--x-dark:    hsl(50, 100%, 26%)
+--global-color-warning--xx-dark:   hsl(50, 100%, 14%)
+--global-color-warning--xxx-dark:  hsl(50, 100%, 02%)
+
+Weight: 2
+
+Styleguide Settings.CustomProperties.Colors.Warning
+*/
   --global-color-warning--xxx-light: hsl(35, 40%, 98%);
   --global-color-warning--xx-light:  hsl(35, 40%, 86%);
   --global-color-warning--x-light:   hsl(35, 40%, 74%);
@@ -212,6 +144,29 @@ Styleguide Core.Settings.CustomProperties.Colors.Objective
   --global-color-warning--xx-dark:   hsl(35, 40%, 14%);
   --global-color-warning--xxx-dark:  hsl(35, 40%, 02%);
 
+/*
+Negative
+
+These colors are for negative things, like:
+- destructive actions
+- error notifications
+- dangerous events
+
+Colors:
+--global-color-danger--xxx-light: hsl(0, 100%, 98%)
+--global-color-danger--xx-light:  hsl(0, 100%, 86%)
+--global-color-danger--x-light:   hsl(0, 100%, 74%)
+--global-color-danger--light:     hsl(0, 100%, 62%)
+--global-color-danger:            hsl(0, 100%, 50%)
+--global-color-danger--dark:      hsl(0, 100%, 38%)
+--global-color-danger--x-dark:    hsl(0, 100%, 26%)
+--global-color-danger--xx-dark:   hsl(0, 100%, 14%)
+--global-color-danger--xxx-dark:  hsl(0, 100%, 02%)
+
+Weight: 3
+
+Styleguide Settings.CustomProperties.Colors.Negative
+*/
   --global-color-danger--xxx-light: hsl(330, 60%, 98%);
   --global-color-danger--xx-light:  hsl(330, 60%, 86%);
   --global-color-danger--x-light:   hsl(330, 60%, 74%);
@@ -222,6 +177,29 @@ Styleguide Core.Settings.CustomProperties.Colors.Objective
   --global-color-danger--xx-dark:   hsl(330, 60%, 14%);
   --global-color-danger--xxx-dark:  hsl(330, 60%, 02%);
 
+/*
+Objective
+
+These colors are for things to notice, like:
+- alternate actions
+- informative notifications
+- noteworthy events
+
+Colors:
+--global-color-inform--xxx-light: hsl(210, 100%, 98%)
+--global-color-inform--xx-light:  hsl(210, 100%, 86%)
+--global-color-inform--x-light:   hsl(210, 100%, 74%)
+--global-color-inform--light:     hsl(210, 100%, 62%)
+--global-color-inform:            hsl(210, 100%, 50%)
+--global-color-inform--dark:      hsl(210, 100%, 38%)
+--global-color-inform--x-dark:    hsl(210, 100%, 26%)
+--global-color-inform--xx-dark:   hsl(210, 100%, 14%)
+--global-color-inform--xxx-dark:  hsl(210, 100%, 02%)
+
+Weight: 4
+
+Styleguide Settings.CustomProperties.Colors.Objective
+*/
   --global-color-inform--xxx-light: hsl(190, 40%, 98%);
   --global-color-inform--xx-light:  hsl(190, 40%, 86%);
   --global-color-inform--x-light:   hsl(190, 40%, 74%);
@@ -232,6 +210,27 @@ Styleguide Core.Settings.CustomProperties.Colors.Objective
   --global-color-inform--xx-dark:   hsl(190, 40%, 14%);
   --global-color-inform--xxx-dark:  hsl(190, 40%, 02%);
 
+/*
+Objective
+
+These colors are for anything styled as an accent:
+- designer whim
+
+Colors:
+--global-color-accent--xxx-light: hsl(270, 100%, 98%)
+--global-color-accent--xx-light:  hsl(270, 100%, 86%)
+--global-color-accent--x-light:   hsl(270, 100%, 74%)
+--global-color-accent--light:     hsl(270, 100%, 62%)
+--global-color-accent-            hsl(270, 100%, 50%)
+--global-color-accent--dark:      hsl(270, 100%, 38%)
+--global-color-accent--x-dark:    hsl(270, 100%, 26%)
+--global-color-accent--xx-dark:   hsl(270, 100%, 14%)
+--global-color-accent--xxx-dark:  hsl(270, 100%, 02%)
+
+Weight: 4
+
+Styleguide Settings.CustomProperties.Colors.Objective
+*/
   --global-color-accent--xxx-light: hsl(270, 50%, 98%);
   --global-color-accent--xx-light:  hsl(270, 50%, 86%);
   --global-color-accent--x-light:   hsl(270, 50%, 74%);
