--- a/client/src/styles/_imports/trumps/README.css
+++ b/client/src/styles/_imports/trumps/README.css
@@ -17,7 +17,7 @@ Rules:
 
 Weight: 7
 
-Styleguide Core.Trumps
+Styleguide Trumps
 */
 
 /*
@@ -40,7 +40,7 @@ Rules:
 - All overrides **must** have a comment.
 - Scope styles should have a comment.
 
-Styleguide Core.Trumps.Scopes
+Styleguide Trumps.Scopes
 */
 
 /*
@@ -64,7 +64,7 @@ Rules:
 - All other existing stylesheets must be considered first.
 - Prefer this to inline styles.
 
-Styleguide Core.Trumps.Utilities
+Styleguide Trumps.Utilities
 */
 
 /*
