--- a/client/src/styles/_imports/generics/roots.css
+++ b/client/src/styles/_imports/generics/roots.css
@@ -1,41 +1,2 @@
-/*
-Main Root (i.e. `html`)
-
-The root (top-level element) of an HTML document. These styles cascade to affect most elements.
-- Make 1 `rem` equal 10 `px`, so we can use pixel value with rem unit.
-
-Reference:
-
-- [MDN: HTML element reference: Main root](https://developer.mozilla.org/en-US/docs/Web/HTML/Element#Main_root)
-
-Weight: 1
-
-Styleguide Generics.MainRoot
-*/
-html {
-  /* FAQ: Makes `1.0rem` equal `10px` */
-  /* SEE: http://snook.ca/archives/html_and_css/font-size-with-rem */
-  font-size: 62.5%;
-}
-
-/*
-Sectioning Root (i.e. `body`)
-
-The content of an HTML document. These styles cascade to affect most elements.
-
-Reference:
-
-- [MDN: HTML element reference: Main root](https://developer.mozilla.org/en-US/docs/Web/HTML/Element#Sectioning_root)
-
-Weight: 1.5
-
-Styleguide Generics.SectioningRoot
-*/
-body {
-  margin: 0;
-
-  background-color: var(--global-color-bkgd--normal);
-  color: var(--global-color-text--normal);
-  font-size: var(--global-font-size--normal);
-  font-family: var(--global-font-family--primary);
-}
+@import "./roots.structure.css";
+@import "./roots.skin.css";
